antlr4/sample/ExprParser.java
// Generated from Expr.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, NUMERO_INTEIRO_POSITIVO=12, NUMERO_INTEIRO_NEGATIVO=13, 
		NUMERO_FLOAT_POSITIVO=14, NUMERO_FLOAT_NEGATIVO=15, NUMERO_ZERO=16, NOVALINHA=17, 
		WS=18;
	public static final int
		RULE_prog = 0, RULE_expr = 1, RULE_operador = 2, RULE_numero_real = 3, 
		RULE_numero_inteiro_semzero = 4, RULE_numero_inteiro = 5, RULE_numero_zero = 6, 
		RULE_numero_float_semzero = 7, RULE_numero_float = 8, RULE_numero_inteiro_positivo = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "expr", "operador", "numero_real", "numero_inteiro_semzero", 
			"numero_inteiro", "numero_zero", "numero_float_semzero", "numero_float", 
			"numero_inteiro_positivo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "'/'", "')'", "'|'", "'%'", "'^'", "'+'", "'-'", "'*'", 
			"'MEM'", "'RES'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			"NUMERO_INTEIRO_POSITIVO", "NUMERO_INTEIRO_NEGATIVO", "NUMERO_FLOAT_POSITIVO", 
			"NUMERO_FLOAT_NEGATIVO", "NUMERO_ZERO", "NOVALINHA", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> NOVALINHA() { return getTokens(ExprParser.NOVALINHA); }
		public TerminalNode NOVALINHA(int i) {
			return getToken(ExprParser.NOVALINHA, i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(20);
				expr();
				setState(21);
				match(NOVALINHA);
				}
				}
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Numero_inteiroContext numero_inteiro() {
			return getRuleContext(Numero_inteiroContext.class,0);
		}
		public Numero_inteiro_semzeroContext numero_inteiro_semzero() {
			return getRuleContext(Numero_inteiro_semzeroContext.class,0);
		}
		public List<Numero_zeroContext> numero_zero() {
			return getRuleContexts(Numero_zeroContext.class);
		}
		public Numero_zeroContext numero_zero(int i) {
			return getRuleContext(Numero_zeroContext.class,i);
		}
		public Numero_float_semzeroContext numero_float_semzero() {
			return getRuleContext(Numero_float_semzeroContext.class,0);
		}
		public Numero_floatContext numero_float() {
			return getRuleContext(Numero_floatContext.class,0);
		}
		public List<Numero_realContext> numero_real() {
			return getRuleContexts(Numero_realContext.class);
		}
		public Numero_realContext numero_real(int i) {
			return getRuleContext(Numero_realContext.class,i);
		}
		public Numero_inteiro_positivoContext numero_inteiro_positivo() {
			return getRuleContext(Numero_inteiro_positivoContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public OperadorContext operador() {
			return getRuleContext(OperadorContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		try {
			setState(193);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(28);
				match(T__0);
				setState(29);
				numero_inteiro();
				setState(30);
				numero_inteiro_semzero();
				setState(31);
				match(T__1);
				setState(32);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				match(T__0);
				setState(35);
				numero_zero();
				setState(36);
				numero_zero();
				setState(37);
				match(T__1);
				setState(38);
				match(T__2);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(40);
				match(T__0);
				setState(41);
				numero_inteiro();
				setState(42);
				numero_inteiro_semzero();
				setState(43);
				match(T__3);
				setState(44);
				match(T__2);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(46);
				match(T__0);
				setState(47);
				numero_inteiro();
				setState(48);
				numero_float_semzero();
				setState(49);
				match(T__3);
				setState(50);
				match(T__2);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(52);
				match(T__0);
				setState(53);
				numero_float();
				setState(54);
				numero_inteiro_semzero();
				setState(55);
				match(T__3);
				setState(56);
				match(T__2);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(58);
				match(T__0);
				setState(59);
				numero_float();
				setState(60);
				numero_float_semzero();
				setState(61);
				match(T__3);
				setState(62);
				match(T__2);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(64);
				match(T__0);
				setState(65);
				numero_zero();
				setState(66);
				numero_zero();
				setState(67);
				match(T__3);
				setState(68);
				match(T__2);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(70);
				match(T__0);
				setState(71);
				numero_inteiro();
				setState(72);
				numero_inteiro_semzero();
				setState(73);
				match(T__4);
				setState(74);
				match(T__2);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(76);
				match(T__0);
				setState(77);
				numero_zero();
				setState(78);
				numero_zero();
				setState(79);
				match(T__4);
				setState(80);
				match(T__2);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(82);
				match(T__0);
				setState(83);
				numero_real();
				setState(84);
				numero_inteiro_positivo();
				setState(85);
				match(T__5);
				setState(86);
				match(T__2);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(88);
				match(T__0);
				setState(89);
				numero_real();
				setState(90);
				numero_real();
				setState(91);
				match(T__6);
				setState(92);
				match(T__2);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(94);
				match(T__0);
				setState(95);
				numero_real();
				setState(96);
				numero_real();
				setState(97);
				match(T__7);
				setState(98);
				match(T__2);
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(100);
				match(T__0);
				setState(101);
				numero_real();
				setState(102);
				numero_real();
				setState(103);
				match(T__8);
				setState(104);
				match(T__2);
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(106);
				match(T__0);
				setState(107);
				expr();
				setState(108);
				expr();
				setState(109);
				operador();
				setState(110);
				match(T__2);
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(112);
				match(T__0);
				setState(113);
				numero_real();
				setState(114);
				expr();
				setState(115);
				operador();
				setState(116);
				match(T__2);
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(118);
				match(T__0);
				setState(119);
				numero_real();
				setState(120);
				match(T__9);
				setState(121);
				match(T__2);
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(123);
				match(T__0);
				setState(124);
				match(T__9);
				setState(125);
				match(T__2);
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(126);
				match(T__0);
				setState(127);
				expr();
				setState(128);
				match(T__9);
				setState(129);
				match(T__2);
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(131);
				match(T__0);
				setState(132);
				match(T__9);
				setState(133);
				expr();
				setState(134);
				match(T__2);
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(136);
				match(T__0);
				setState(137);
				match(T__9);
				setState(138);
				expr();
				setState(139);
				operador();
				setState(140);
				match(T__2);
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 21);
				{
				setState(142);
				match(T__0);
				setState(143);
				numero_real();
				setState(144);
				match(T__9);
				setState(145);
				expr();
				setState(146);
				operador();
				setState(147);
				match(T__2);
				}
				break;
			case 22:
				enterOuterAlt(_localctx, 22);
				{
				setState(149);
				match(T__0);
				setState(150);
				numero_inteiro_positivo();
				setState(151);
				match(T__10);
				setState(152);
				match(T__2);
				}
				break;
			case 23:
				enterOuterAlt(_localctx, 23);
				{
				setState(154);
				match(T__0);
				setState(155);
				numero_inteiro_positivo();
				setState(156);
				match(T__10);
				setState(157);
				expr();
				setState(158);
				operador();
				setState(159);
				match(T__2);
				}
				break;
			case 24:
				enterOuterAlt(_localctx, 24);
				{
				setState(161);
				match(T__0);
				setState(162);
				expr();
				setState(163);
				numero_inteiro_positivo();
				setState(164);
				match(T__10);
				setState(165);
				match(T__2);
				}
				break;
			case 25:
				enterOuterAlt(_localctx, 25);
				{
				setState(167);
				match(T__0);
				setState(168);
				expr();
				setState(169);
				match(T__10);
				setState(170);
				match(T__2);
				}
				break;
			case 26:
				enterOuterAlt(_localctx, 26);
				{
				setState(172);
				match(T__0);
				setState(173);
				expr();
				setState(174);
				match(T__10);
				setState(175);
				expr();
				setState(176);
				match(T__2);
				}
				break;
			case 27:
				enterOuterAlt(_localctx, 27);
				{
				setState(178);
				match(T__0);
				setState(179);
				expr();
				setState(180);
				match(T__10);
				setState(181);
				expr();
				setState(182);
				operador();
				setState(183);
				match(T__2);
				}
				break;
			case 28:
				enterOuterAlt(_localctx, 28);
				{
				setState(185);
				match(T__0);
				setState(186);
				expr();
				setState(187);
				match(T__10);
				setState(188);
				expr();
				setState(189);
				match(T__10);
				setState(190);
				operador();
				setState(191);
				match(T__2);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperadorContext extends ParserRuleContext {
		public OperadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterOperador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitOperador(this);
		}
	}

	public final OperadorContext operador() throws RecognitionException {
		OperadorContext _localctx = new OperadorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_operador);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__4) | (1L << T__5) | (1L << T__6) | (1L << T__7) | (1L << T__8))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Numero_realContext extends ParserRuleContext {
		public Numero_inteiroContext numero_inteiro() {
			return getRuleContext(Numero_inteiroContext.class,0);
		}
		public Numero_floatContext numero_float() {
			return getRuleContext(Numero_floatContext.class,0);
		}
		public Numero_realContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numero_real; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterNumero_real(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitNumero_real(this);
		}
	}

	public final Numero_realContext numero_real() throws RecognitionException {
		Numero_realContext _localctx = new Numero_realContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_numero_real);
		try {
			setState(199);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(197);
				numero_inteiro();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(198);
				numero_float();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Numero_inteiro_semzeroContext extends ParserRuleContext {
		public TerminalNode NUMERO_INTEIRO_POSITIVO() { return getToken(ExprParser.NUMERO_INTEIRO_POSITIVO, 0); }
		public TerminalNode NUMERO_INTEIRO_NEGATIVO() { return getToken(ExprParser.NUMERO_INTEIRO_NEGATIVO, 0); }
		public Numero_inteiro_semzeroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numero_inteiro_semzero; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterNumero_inteiro_semzero(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitNumero_inteiro_semzero(this);
		}
	}

	public final Numero_inteiro_semzeroContext numero_inteiro_semzero() throws RecognitionException {
		Numero_inteiro_semzeroContext _localctx = new Numero_inteiro_semzeroContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_numero_inteiro_semzero);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201);
			_la = _input.LA(1);
			if ( !(_la==NUMERO_INTEIRO_POSITIVO || _la==NUMERO_INTEIRO_NEGATIVO) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Numero_inteiroContext extends ParserRuleContext {
		public Numero_inteiro_semzeroContext numero_inteiro_semzero() {
			return getRuleContext(Numero_inteiro_semzeroContext.class,0);
		}
		public Numero_zeroContext numero_zero() {
			return getRuleContext(Numero_zeroContext.class,0);
		}
		public Numero_inteiroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numero_inteiro; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterNumero_inteiro(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitNumero_inteiro(this);
		}
	}

	public final Numero_inteiroContext numero_inteiro() throws RecognitionException {
		Numero_inteiroContext _localctx = new Numero_inteiroContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_numero_inteiro);
		try {
			setState(205);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERO_INTEIRO_POSITIVO:
			case NUMERO_INTEIRO_NEGATIVO:
				enterOuterAlt(_localctx, 1);
				{
				setState(203);
				numero_inteiro_semzero();
				}
				break;
			case NUMERO_ZERO:
				enterOuterAlt(_localctx, 2);
				{
				setState(204);
				numero_zero();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Numero_zeroContext extends ParserRuleContext {
		public TerminalNode NUMERO_ZERO() { return getToken(ExprParser.NUMERO_ZERO, 0); }
		public Numero_zeroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numero_zero; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterNumero_zero(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitNumero_zero(this);
		}
	}

	public final Numero_zeroContext numero_zero() throws RecognitionException {
		Numero_zeroContext _localctx = new Numero_zeroContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_numero_zero);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(207);
			match(NUMERO_ZERO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Numero_float_semzeroContext extends ParserRuleContext {
		public TerminalNode NUMERO_FLOAT_POSITIVO() { return getToken(ExprParser.NUMERO_FLOAT_POSITIVO, 0); }
		public TerminalNode NUMERO_FLOAT_NEGATIVO() { return getToken(ExprParser.NUMERO_FLOAT_NEGATIVO, 0); }
		public Numero_float_semzeroContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numero_float_semzero; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterNumero_float_semzero(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitNumero_float_semzero(this);
		}
	}

	public final Numero_float_semzeroContext numero_float_semzero() throws RecognitionException {
		Numero_float_semzeroContext _localctx = new Numero_float_semzeroContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_numero_float_semzero);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			_la = _input.LA(1);
			if ( !(_la==NUMERO_FLOAT_POSITIVO || _la==NUMERO_FLOAT_NEGATIVO) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Numero_floatContext extends ParserRuleContext {
		public Numero_float_semzeroContext numero_float_semzero() {
			return getRuleContext(Numero_float_semzeroContext.class,0);
		}
		public Numero_zeroContext numero_zero() {
			return getRuleContext(Numero_zeroContext.class,0);
		}
		public Numero_floatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numero_float; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterNumero_float(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitNumero_float(this);
		}
	}

	public final Numero_floatContext numero_float() throws RecognitionException {
		Numero_floatContext _localctx = new Numero_floatContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_numero_float);
		try {
			setState(213);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NUMERO_FLOAT_POSITIVO:
			case NUMERO_FLOAT_NEGATIVO:
				enterOuterAlt(_localctx, 1);
				{
				setState(211);
				numero_float_semzero();
				}
				break;
			case NUMERO_ZERO:
				enterOuterAlt(_localctx, 2);
				{
				setState(212);
				numero_zero();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Numero_inteiro_positivoContext extends ParserRuleContext {
		public TerminalNode NUMERO_INTEIRO_POSITIVO() { return getToken(ExprParser.NUMERO_INTEIRO_POSITIVO, 0); }
		public Numero_inteiro_positivoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numero_inteiro_positivo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).enterNumero_inteiro_positivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprListener ) ((ExprListener)listener).exitNumero_inteiro_positivo(this);
		}
	}

	public final Numero_inteiro_positivoContext numero_inteiro_positivo() throws RecognitionException {
		Numero_inteiro_positivoContext _localctx = new Numero_inteiro_positivoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_numero_inteiro_positivo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(215);
			match(NUMERO_INTEIRO_POSITIVO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}